...
            onItemClick= {}
        )
    }
}

const val TEST_TAG_LOADING_INDICATOR = "loading_indicator"
const val TEST_TAG_RANDOM_PEOPLE_LIST_USERS = "random_people_list_users"
const val TEST_TAG_RANDOM_PEOPLE_LIST_USER = "random_people_list_user"
const val TEST_TAG_RANDOM_PEOPLE_LIST_LAST_USER = "random_people_list_user_last"
const val TEST_TAG_NO_USERS_IMAGE = "no_users_image"
const val TEST_TAG_SEARCH_ICON = "search_icon"
const val TEST_TAG_SEARCH_CLOSE_ICON = "search_close_icon"

const val TEST_TAG_SEARCH_TEXT_FILED = "search_text_field"
