<resources>
    <string name="app_name">Random People</string>
    <string name="label_country">Country:</string>
    <string name="label_contact_info">Contact information:</string>
    <string name="label_no_users">Push update button in order to obtain your random users list!</string>
    <string name="warning_empty_cache">Cache is empty</string>
    <string name="action_update">Update</string>
    <string name="users_loading">Profiles fetching…</string>

    <!--Error messages-->
    <string name="error_timeout">Slow internet! Try later</string>
    <string name="error_unauthorized">You are not authorized to access the information from the server</string>
    <string name="error_no_internet">Invoking local storage! Check the internet connection</string>
    <string name="error_server">Server error</string>
    <string name="error_unknown">Unknown error</string>
    <string name="error_mapping_profile">Unexpected error while the profile loading! Try later!</string>

    <!--Resource descriptions-->
    <string name="image_description">Profile image</string>
    <string name="image_description_profile_error">User profile error</string>
    <string name="description_no_users_image">To refresh the user list</string>
    <string name="description_navigation_image">Navigation image</string>
    <string name="placeholder_user_search">Enter the user\'s first or last name</string>
</resources>
